[gd_scene load_steps=3 format=3 uid="uid://rsf6f7pytv7u"]

[ext_resource type="Script" uid="uid://vjqyfycqgf8h" path="res://src/ui_widgets/options_dialog.gd" id="1_shf74"]
[ext_resource type="FontFile" uid="uid://dc0w4sx0h0fui" path="res://assets/fonts/FontBold.ttf" id="2_it3qh"]

[node name="OptionsDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OverlayPanel"
script = ExtResource("1_shf74")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TextContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MainContainer/TextContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_it3qh")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="Label" type="RichTextLabel" parent="MainContainer/TextContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
fit_content = true

[node name="ListPanel" type="PanelContainer" parent="MainContainer/TextContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ListScrollContainer" type="ScrollContainer" parent="MainContainer/TextContainer/ListPanel"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/TextContainer/ListPanel/ListScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="ListLabel" type="Label" parent="MainContainer/TextContainer/ListPanel/ListScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="MainContainer/TextContainer"]
visible = false
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="OptionsContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1
